Resolution des bug et amelioration des codes

--- a/index.html
+++ b/index.html
@@ -8,6 +8,9 @@
 <body>
 
     <h1>Salut je vient du main</h1>
-    
+
+    <h2 id="meVSme">
+        Lorem ipsum dolor sit amet, consectetur adipisicing elit. Numquam possimus consequatur soluta animi, recusandae laudantium reprehenderit, consequuntur labore aut accusantium porro qui quod voluptas est fugiat nam. Autem, vel aspernatur.
+    </h2>
 </body>
 </html>
